<resources>
    <string name="app_name">Urban Homework</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_loading">An error occurred while loading</string>
    <string name="action_retry">Retry</string>
    <string name="loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="no_results">No data to show…</string>
    <string name="datetime_filter">Date and time filter</string>
    <string name="cancel_filter">Cancel</string>
    <string name="character_image_desc">Character image</string>
    <string name="character_information">Character Information</string>
    <string name="location_data">Location</string>
    <string name="charinfo_status">Status</string>
    <string name="charinfo_species">Species</string>
    <string name="charinfo_gender">Gender</string>
    <string name="location_name">Name</string>
    <string name="location_type">Type</string>
    <string name="location_dimensions">Dimensions</string>
    <string name="unknown">Unknown</string>
</resources>